applications/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: infrastructure
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - headlamp.perch-humboldt.ts.net
      secretName: headlamp-tls-cert
  rules:
    - host: headlamp.perch-humboldt.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
